@startuml scenario
hide circle
hide methods
skinparam linetype ortho

entity "battles" as battles {
  * id : BIGINT <<PK>>
  --
  title : VARCHAR(255)
}

entity "scenarios" as scenarios {
  * id : BIGINT <<PK>>
  --
  battle_id : BIGINT <<FK, UNIQUE>>
  is_interactive : BOOLEAN
  status : VARCHAR(20)
  creator_type : VARCHAR(20)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "scenario_nodes" as scenario_nodes {
  * id : BIGINT <<PK>>
  --
  scenario_id : BIGINT <<FK>>
  node_name : VARCHAR(100)
  is_start_node : BOOLEAN
  audio_duration : INT
  auto_next_node_id : BIGINT
  node_order : INT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "scenario_scripts" as scenario_scripts {
  * id : BIGINT <<PK>>
  --
  node_id : BIGINT <<FK>>
  start_time_ms : INT
  speaker_type : VARCHAR(20)
  speaker_name : VARCHAR(100)
  text : TEXT
  tone : VARCHAR(20)
  audio_url : VARCHAR(500)
  script_order : INT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "scenario_options" as scenario_options {
  * id : BIGINT <<PK>>
  --
  node_id : BIGINT <<FK>>
  label : VARCHAR(200)
  title : VARCHAR(255) <<nullable>>
  next_node_id : BIGINT
  option_order : INT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "scenario_audios" as scenario_audios {
  * scenario_id : BIGINT <<FK>>
  * path_key : VARCHAR(50)
  --
  audio_url : VARCHAR(500)
}

entity "scenario_voice_settings" as scenario_voice_settings {
  * scenario_id : BIGINT <<FK>>
  * speaker_type : VARCHAR(20)
  --
  voice_code : VARCHAR(200)
}

battles ||--|| scenarios : has
scenarios ||--o{ scenario_nodes : has
scenario_nodes ||--o{ scenario_scripts : has
scenario_nodes ||--o{ scenario_options : has
scenarios ||--o{ scenario_audios : has
scenarios ||--o{ scenario_voice_settings : has

note right of scenarios
  발행(PUBLISHED) 시점에 TTS 파이프라인 수행
  voice_settings는 화자별 보이스 코드 저장
end note

note bottom of scenario_options
  title : 선택의 시간 화면에 보여줄 선택지 설명
  (예: "첫 만남에는 그에 걸맞은 격조와
  분위기가 필수다, 유죄!"). nullable.
end note

note bottom of scenario_scripts
  tone : 대사 한 줄의 감성적인 톤 (Tone enum)
    NEUTRAL | ANGRY | SAD | EMBARRASSED | EMPHASIS
    | WHISPERING | SOFT_TONE | BREATHY | EXCITED
  NEUTRAL 이면 TTS 전송 시 톤 태그를 붙이지 않음.
  오디오 효과 태그([sighing] 등)는 text 인라인에 그대로 둔다.
  tone 이 바뀌면 audio_url 을 비워 재합성한다.
end note

@enduml
